削除された関数が参照というエラー

--- a/PG3.vcxproj
+++ b/PG3.vcxproj
@@ -139,19 +139,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Circle.cpp" />
-    <ClCompile Include="Enemy.cpp" />
-    <ClCompile Include="IShape.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="RectAngle.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Manager.cpp" />
+    <ClCompile Include="Task.cpp" />
+    <ClCompile Include="TaskManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Circle.h" />
-    <ClInclude Include="Enemy.h" />
-    <ClInclude Include="IShape.h" />
-    <ClInclude Include="RectAngle.h" />
-    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Content.h" />
+    <ClInclude Include="DeadLine.h" />
+    <ClInclude Include="Id.h" />
+    <ClInclude Include="Manager.h" />
+    <ClInclude Include="Priority.h" />
+    <ClInclude Include="Status.h" />
+    <ClInclude Include="Task.h" />
+    <ClInclude Include="TaskManager.h" />
+    <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
